Bug 30110 - Weborder: iPad > Modifiers in the right column are not aligned

--- a/skins/weborder/css/modifiers.css
+++ b/skins/weborder/css/modifiers.css
@@ -76,8 +76,6 @@
     display: inline-block;
     height: 21px;
     width: 21px;
-    position: relative;
-    top: 5px;
     border-radius: 4px;
     float: left;
     margin-right: 3px;
